# ServerAPI

./: .deepsource.toml  .gitignore  README.md  main.py  noname.yml  pyproject.toml  requirements.txt  servers.yaml
app/: __init__.py  config.py  crud.py  db.py  log.py  models.py
app/api/: auth.py  servers.py  webhook.py
app/auth/: auth.py  auth_crud.py  crud.py  models.py  schemas.py
app/core/: auth_middleware.py
app/file_storage/: __init__.py  cleanup.py  conn.py  models.py  sync.py  utils.py
app/getstatus/: GetServerStatus.py  MineStatus.py
app/middleware/: __init__.py  auth_middleware.py
app/models/: __init__.py  server.py  ticket.py  user.py
app/router/: __init__.py  auth.py  report.py  search.py  servers.py  user.py  webhook.py
app/schemas/: common.py
app/servers/: GetServerStatus.py  crud.py  models.py  schemas.py
app/services/: __init__.py  utils.py
app/services/auth/: __init__.py  auth.py  captcha.py  crud.py  schemas.py  validation.py
app/services/conn/: __init__.py  db.py  meilisearch.py  redis.py
app/services/report/: __init__.py  crud.py  models.py  schemas.py
app/services/search/: __init__.py  sync_index.py
app/services/servers/: GetServerStatus.py  MineStatus.py  __init__.py  crud.py  get_stats.py  models.py  schemas.py  stats_utils.py  utils.py
app/services/user/: __init__.py  crud.py  models.py  schemas.py  utils.py
app/user/: crud.py  models.py  schemas.py
migrations/default/: 0_20250325195011_init.py  1_20250325202532_gallery_and_cover.py  2_20250401084610_add_created_at_to_gallery.py  3_20250426065706_server_log.py  4_20250523001955_adapts_ipv6.py
template/: email_code_verify.html  email_verify.html
