[project]
name = "serverapi"
version = "0.1.0"
requires-python = ">=3.10,<4"
dependencies = ["fastapi (>=0.115.8,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)", "loguru (>=0.7.3,<0.8.0)", "tortoise-orm (>=0.24.0,<0.25.0)", "python-dotenv (>=1.0.1,<2.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "ujson (>=5.10.0,<6.0.0)", "aiomysql (>=0.2.0,<0.3.0)", "mcstatus (>=11.1.1,<12.0.0)"]


[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
